Align kanban board, fixed task notes display, changed project roles to user group, added login username display on navbar

--- a/client/src/assets/Kanban.css
+++ b/client/src/assets/Kanban.css
@@ -1,11 +1,11 @@
 .kanban-container {
     margin: 10px 3em;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     /* flex-direction: column; */
     align-content: center;
   }
-  .kanban-container > h3, .kanban-container > h2 {
+  /* .kanban-container > h3, .kanban-container > h2 {
     text-align: center;
     font-weight: bold;  
-  }
+  } */
